--- a/style.css
+++ b/style.css
@@ -1,67 +1,103 @@
-/* Estilo global */
 body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
     margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif;
 }
 
-/* Estilo do contêiner principal */
 .container-fluid {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    padding-top: 20px;
 }
 
-/* Estilo do avatar */
 .avatar {
+    display: inline-block;
+    vertical-align: middle;
     border-radius: 50%;
-    margin-bottom: 20px;
-}
-
-/* Estilo dos cabeçalhos */
-h1, h2, h4 {
-    margin-top: 0;
 }
 
 h1 {
-    font-size: 40px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 20px;
 }
 
-h2 {
-    font-size: 28px;
+.ms_footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    background-color: #f8f9fa;
+    border-top: 1px solid #dee2e6;
 }
 
-h4 {
-    font-size: 18px;
+
+@font-face {
+	font-family: 'Roboto Mono';
+	src: url('/font/subset-RobotoMono-Regular.eot');
+	src: local('Roboto Mono Regular'), local('RobotoMono-Regular'),
+         url('/font/subset-RobotoMono-Regular.eot?#iefix') format('embedded-opentype'),
+         url('/font/subset-RobotoMono-Regular.woff2') format('woff2'),
+         url('/font/subset-RobotoMono-Regular.woff') format('woff'),
+         url('/font/subset-RobotoMono-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
-/* Estilo dos links */
-a {
-    color: #007bff;
-    text-decoration: none;
+@font-face {
+	font-family: 'Roboto';
+	src: url('/font/subset-Roboto-Bold.eot');
+	src: local('Roboto Bold'), local('Roboto-Bold'),
+         url('/font/subset-Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+         url('/font/subset-Roboto-Bold.woff2') format('woff2'),
+         url('/font/subset-Roboto-Bold.woff') format('woff'),
+         url('/font/subset-Roboto-Bold.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+	font-display: swap;
 }
 
-a:hover {
-    text-decoration: underline;
+@font-face {
+	font-family: 'Roboto';
+	src: url('/font/subset-Roboto-Regular.eot');
+	src: local('Roboto'), local('Roboto-Regular'),
+         url('/font/subset-Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+         url('/font/subset-Roboto-Regular.woff2') format('woff2'),
+         url('/font/subset-Roboto-Regular.woff') format('woff'),
+         url('/font/subset-Roboto-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
-/* Estilo do ícone especial */
-.text-special {
-    font-size: 18px;
-    font-weight: bold;
+@font-face {
+	font-family: 'Lato';
+	src: url('/font/subset-Lato-Bold.eot');
+	src: local('Lato Bold'), local('Lato-Bold'),
+         url('/font/subset-Lato-Bold.eot?#iefix') format('embedded-opentype'),
+         url('/font/subset-Lato-Bold.woff2') format('woff2'),
+         url('/font/subset-Lato-Bold.woff') format('woff'),
+         url('/font/subset-Lato-Bold.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+	font-display: swap;
 }
 
-/* Estilo dos icones de rede social */
-nav {
-    margin-top: 20px;
+body, td, th {
+	font-family: 'Roboto';
+	font-size: 16px;
+	line-height: 150%;
+	color: #000;
 }
 
-nav a {
-    margin-right: 10px;
-}
-
-.fa-3x {
-    font-size: 3em;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Lato';
+	font-weight: bold;
+	font-variant-ligatures: none;
+	color: #000;
 }
